@@ -15,6 +15,7 @@ java {
 
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['--enable-preview']  // Enable preview features during compilation
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']  // Enable incubator Vector API module during compilation
 }
 
 tasks.withType(JavaExec).configureEach {
@@ -25,6 +26,9 @@ tasks.withType(JavaExec).configureEach {
 tasks.withType(Test).configureEach {
     jvmArgs += '--enable-preview'  // Enable preview features during tests
     jvmArgs += "-Djava.library.path=src/main/resources/lib"
+
+    // Enable incubator Vector API module during tests runtime
+    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
 }
 
 
